<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#6C304FFE"
    tools:context=".SingInUpAct">

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edApartNum"
        app:layout_constraintStart_toStartOf="@+id/edApartNum"
        app:layout_constraintTop_toBottomOf="@+id/edApartNum"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintStart_toStartOf="@+id/edLogin"
        app:layout_constraintTop_toBottomOf="@+id/edLogin"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edHouseNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/frame_house_number"
        android:inputType="numberSigned|numberPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edApartNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/apartment_number"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edHouseNum"
        app:layout_constraintStart_toStartOf="@+id/edHouseNum"
        app:layout_constraintTop_toBottomOf="@+id/edHouseNum" />

    <Button
        android:id="@+id/bEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#6C304FFE"
        android:onClick="onClickEntry"
        android:text="@string/entry"
        android:textColor="#92000000"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />

    <Button
        android:id="@+id/bRegistr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6C304FFE"
        android:onClick="onClickRegistration"
        android:text="@string/registration"
        android:textColor="#92000000"
        app:layout_constraintEnd_toEndOf="@+id/edPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPhone"
        app:layout_constraintTop_toBottomOf="@+id/bEntry" />

    <ImageView
        android:id="@+id/imageRegistr"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/edLogin"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edLogin"
        app:srcCompat="@drawable/registr"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageEmtry"
        android:layout_width="90dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/edPassword"
        app:layout_constraintEnd_toStartOf="@+id/edLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edLogin"
        app:srcCompat="@drawable/entry" />

    <TextView
        android:id="@+id/textEror"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="@+id/bRegistr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bRegistr"
        app:layout_constraintTop_toBottomOf="@+id/bRegistr" />
</androidx.constraintlayout.widget.ConstraintLayout>