<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageBarrier"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_81" />

    <TextView
        android:id="@+id/textGreetings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/imageBarrier"
        app:layout_constraintStart_toStartOf="@+id/imageBarrier"
        app:layout_constraintTop_toBottomOf="@+id/imageBarrier" />

    <Button
        android:id="@+id/bSing_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:backgroundTint="#6C304FFE"
        android:onClick="onClickGoToSingIn"
        android:text="@string/sing_in"
        android:textColor="#92000000"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGreetings" />

    <Button
        android:id="@+id/bSing_up"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#6C304FFE"
        android:onClick="onClickGoToSingUp"
        android:text="@string/sing_up"
        android:textColor="#92000000"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSing_in" />

    <Button
        android:id="@+id/bOpen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#9700C853"
        android:onClick="onClickCall"
        android:text="@string/open_the_barrier"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textGreetings"
        app:layout_constraintStart_toStartOf="@+id/textGreetings"
        app:layout_constraintTop_toBottomOf="@+id/bSing_up" />

</androidx.constraintlayout.widget.ConstraintLayout>